deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
    spec:
      serviceAccountName: default
      containers:
        - name: httpd
          image: registry.access.redhat.com/ubi9/httpd-24:latest
          command: 
            - run-httpd
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8080
            - name: https
              containerPort: 8443
              hostPort: 8443
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: site
              mountPath: /var/www/html
      volumes:
        - name: site
          configMap:
            name: hello-world-html
            items:
              - key: index.html
                path: index.html

---
apiVersion: v1
name: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  selector:
    app.kubernetes.io/name: HelloWorld
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:
  namespace:
spec:
